// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.bluetooth;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/bluetooth";


service BluetoothMojoService {
  rpc SetBluetoothState(SetBluetoothStateRequest) returns (google.protobuf.Empty) {}

}

message SetBluetoothStateRequest {
  bool Enabled = 1;
}